Update styling for the turn page, added new background image and adjusted text alignment for better readability. Ready to push changes to remote repository.

--- a/public/turn.html
+++ b/public/turn.html
@@ -216,17 +216,17 @@
             font-size: 16px;
             line-height: 1.5;
             position: relative;
-            background: var(--robot-bg);
+            background: rgba(26, 26, 31, 0.8);
             border-left: 3px solid var(--primary-color);
             color: #c9d1d9;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(5px);
         }
 
         .human .message-bubble {
-            background: var(--human-bg);
             border-left: 3px solid #ff0055;
             border-right: none;
-            color: #fff;
+            color: #c9d1d9;
         }
 
         /* Markdown Styles */
